<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="MAIN" Id="{bd947791-4b97-4a15-8e58-4d7bb5a41737}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	fbBlinklicht : FB_Blinklicht;
	fbVereinzelung : FB_Vereinzelung;
	fbezylinder1 : FB_EZylinder;
	fbezylinder2 : FB_EZylinder;
	fbAmpel : FB_Ampel;
	fbTransport : FB_Transport;
	fbDispenser : FB_Dispenser;
	fbAbfuellmodul : FB_Abfuellmodul;
	fbManAchseX : FB_ManAchse;
	fbManAchseY : FB_ManAchse;
	fbManAchseZ : FB_ManAchse;
	fbManAchseG : FB_ManAchse;
	fbRobotsteuerung : FB_Robotsteuerung;
	fbManipulatormodul : FB_Manipulatormodul;
	ix : UINT;
	ry : REAL;
	ax : Axis_Ref;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ry := FUN_SCALE(TO_REAL(ix),4096,0,350,0);

	
fbAbfuellmodul(
	bEnable:= IFC_HW.bEnable, 
	bExecute:= IFC_HW.bExecute, 
	nstation:= , 
	bEinzelSens1:= IFC_HW.bEinzelSens1, 
	bEinzelSens2:= IFC_HW.bEinzelSens2, 
	bEinzelSens3:= IFC_HW.bEinzelSens3, 
	bEinzelSens4:= IFC_HW.bBandSens1, 
	bBandSens1:= IFC_HW.bBandSens1, 
	bBandSens2:= IFC_HW.bBandSens2, 
	bBandSens3:= IFC_HW.bBandSens3, 
	bBandSens4:= IFC_HW.bBandSens4, 
	bstopper1=> IFC_HW.bBandHub1, 
	bstopper2=> IFC_HW.bBandHub2, 
	bstopper3=>IFC_HW.bBandHub3, 
	estate=> , 
	bgate1=> fbeZylinder1.bgate, 
	bgate2=> fbeZylinder2.bgate, 
	axTransport:= IFC_HW.ax_BandMotor, 
	axDisp1:= IFC_HW.ax_Extruder1, 
	axDisp2:= IFC_HW.ax_Extruder2, 
	axDisp3:= IFC_HW.ax_Extruder3);
	
	fbezylinder1(bgate:= , berror:= , bR1=>IFC_HW.bR1AKT1 , bR2=>IFC_HW.br2AKT1 );
	
	fbezylinder2(bgate:= , berror:= , bR1=>IFC_HW.bR1AKT2 , bR2=> IFC_HW.bR2AKT2);
	
	
	fbAmpel(estate:= fbAbfuellmodul.estate, bAmpelgruen=>IFC_HW.bAmpelGrun , bAmpelrot=>IFC_HW.bAmpelRot , bAmpelgelb=>IFC_HW.bAmpelGelb );

fbManipulatormodul(
	bEnable:= IFC_Hw.bEnable, 
	bExecute:= IFC_Hw.bExecute, 
	pXhome:= GVL_PosKinematic.pXhome, 
	pYhome:= GVL_PosKinematic.pYhome, 
	pZhome:= GVL_PosKinematic.pZhome, 
	pXconv:= GVL_PosKinematic.pXconv, 
	pYconv:= GVL_PosKinematic.pYconv, 
	pZconv:= GVL_PosKinematic.pZconv, 
	pXscale:= GVL_PosKinematic.pXscale, 
	pYscale:= GVL_PosKinematic.pYscale, 
	pZscale:= GVL_PosKinematic.pZscale, 
	pXheat:= GVL_PosKinematic.pXheat, 
	pYheat:= GVL_PosKinematic.pYheat, 
	pZheat:= GVL_PosKinematic.pZheat, 
	pX1stor:= GVL_PosKinematic.pX1stor, 
	pX2stor:= GVL_PosKinematic.pX2stor, 
	pX3stor:= GVL_PosKinematic.pX3stor, 
	pX4stor:= GVL_PosKinematic.pX4stor, 
	pYstor:= GVL_PosKinematic.pYstor, 
	pZstor:= GVL_PosKinematic.pZstor, 
	estateE:= fbAbfuellmodul.estate, 
	bxEndschalter:= IFC_HW.bManEndXmin, 
	byEndschalter:= IFC_HW.bManEndYmin, 
	bzEndschalter:= IFC_HW.bManEndZmin, 
	bGEndschalter:= IFC_HW.bManEndGmin, 
	estate=> , 
	ax_ManX:= IFC_HW.ax_ManX, 
	ax_ManY:= IFC_HW.ax_ManY, 
	ax_ManZ:= IFC_HW.ax_ManZ, 
	ax_ManG:= IFC_HW.ax_ManG);

(*
fbRobotsteuerung(
	bEnable:= IFC_Hw.bEnable, 
	bExecute:= IFC_Hw.bExecute, 
	bxposition:= GVL_PosKinematic.pXconv, 
	byposition:= GVL_PosKinematic.pYconv, 
	bzposition:= GVL_PosKinematic.pZconv, 
	bxEndschalter:= IFC_HW.bManEndXmin, 
	byEndschalter:= IFC_HW.bManEndYmin, 
	bzEndschalter:= IFC_HW.bManEndZmin, 
	bGEndschalter:= IFC_HW.bManEndGmin, 
	estateE:= fbAbfuellmodul.estate, 
	estate=> , 
	movedone=> , 
	ax_ManX:= IFC_HW.ax_ManX, 
	ax_ManY:= IFC_HW.ax_ManY, 
	ax_ManZ:= IFC_HW.ax_ManZ, 
	ax_ManG:= IFC_HW.ax_ManG);

fbManAchseX(
	benable:= IFC_Hw.bEnable, 
	bexecute:= IFC_Hw.bExecute, 
	bEndschalter:= IFC_HW.bManEndXmin, 
	rPosition:= GVL_PosKinematic.pXconv, 
	rVel:= 30, 
	estate=> , 
	ax:= IFC_HW.ax_ManX);
	
fbManAchseY(
	benable:= IFC_Hw.bEnable, 
	bexecute:= IFC_Hw.bExecute, 
	bEndschalter:= IFC_HW.bManEndYmin, 
	rPosition:= GVL_PosKinematic.pYconv, 
	rVel:= 30, 
	estate=> , 
	ax:= IFC_HW.ax_ManY); 

fbManAchseZ(
	benable:= IFC_Hw.bEnable, 
	bexecute:= IFC_Hw.bExecute, 
	bEndschalter:= IFC_HW.bManEndZmin, 
	rPosition:= GVL_PosKinematic.pZconv, 
	rVel:= 30, 
	estate=> , 
	ax:= IFC_HW.ax_ManZ); 	

fbManAchseG(
	benable:= IFC_Hw.bEnable, 
	bexecute:= IFC_Hw.bExecute, 
	bEndschalter:= IFC_HW.bManEndGmin, 
	rPosition:= 2, 
	rVel:= 30, 
	estate=> , 
	ax:= IFC_HW.ax_ManG);
*)]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="55" Count="0" />
      <LineId Id="244" Count="0" />
      <LineId Id="336" Count="0" />
      <LineId Id="375" Count="20" />
      <LineId Id="335" Count="0" />
      <LineId Id="357" Count="0" />
      <LineId Id="73" Count="2" />
      <LineId Id="109" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="450" Count="0" />
      <LineId Id="500" Count="0" />
      <LineId Id="504" Count="29" />
      <LineId Id="501" Count="1" />
      <LineId Id="280" Count="0" />
      <LineId Id="484" Count="15" />
      <LineId Id="482" Count="0" />
      <LineId Id="481" Count="0" />
      <LineId Id="314" Count="6" />
      <LineId Id="313" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="291" Count="6" />
      <LineId Id="290" Count="0" />
      <LineId Id="326" Count="7" />
      <LineId Id="324" Count="0" />
      <LineId Id="473" Count="7" />
      <LineId Id="432" Count="0" />
      <LineId Id="414" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>